gitlab-practice/my-nginx/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-my-nginx-__CI_ENVIRONMENT_SLUG__
  namespace: gitlab
  labels:
    app: gitlab-my-nginx
    ref: __CI_ENVIRONMENT_SLUG__
    track: stable
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gitlab-my-nginx
      ref: __CI_ENVIRONMENT_SLUG__
  template:
    metadata:
      labels:
        app: gitlab-my-nginx
        ref: __CI_ENVIRONMENT_SLUG__
        track: stable
    spec:
      containers:
      - name: app
        image: 10.20.250.21/library/my-nginx:__VERSION__
        imagePullPolicy: Always
