gitlab-practice/my-nginx/manifests/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-my-nginx-__CI_ENVIRONMENT_SLUG__
  namespace: gitlab
  labels:
    app: gitlab-my-nginx
    ref: __CI_ENVIRONMENT_SLUG__
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: __CI_ENVIRONMENT_SLUG__-gitlab-my-nginx.linjb.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab-my-nginx-__CI_ENVIRONMENT_SLUG__
          servicePort: 8000
